# playlist-lab

./: .gitignore  README.md  benchmark_main.py  helpers.py  llm_manager.py  main.py  model_benchmark.py  openai_api_main.py  pyproject.toml  requirements.txt  shuffled_prompts.txt  song_search.py  spotify_client.py  todo.md  token_handler.py
api_clients/: spotify_client.py  token_handler.py
benchmarking/: base_benchmark.py  benchmark_main.py  model_benchmark.py  openai_benchmark.py
playlist_generation/: OpenAIManager.py  llm_manager.py
src/: openai_api_main.py
src/api_clients/: spotify_client.py
src/benchmarking/: model_benchmark.py  openai_benchmark.py
src/playlistGenAI.egg-info/: SOURCES.txt
src/playlist_generation/: OpenAIManager.py
src/utils/: logger_config.py
tests/: test_models.py  test_scorer.py
utils/: helpers.py  logger_config.py
