[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "playlistGenAI"
version = "0.1.0"
description = "LLM generated playlist builder"
authors = [{name = "brndnknn"}]
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    
]

[project.optional-dependencies]
dev =[
    "pytest",
    "black",
]

[tool.setuptools]
package-dir = {"" = "src"}